@@ -2,6 +2,7 @@ Revision history for Perl extension Moose::Autobox
 
 0.10
     - add split, words, lines to String (Sartak)
+    - add 'to' to Number (Debolaz)
 
 0.09 Thu. Oct 23, 2008
     - update Perl6::Junction dependency and support new version
